<resources>
    <string name="app_name">My Login App</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="create_here">Create here</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_referencia">Referencia</string>
</resources>
